--- a/ReadingAndSendMail/bin/DebugConfig.ini
+++ b/ReadingAndSendMail/bin/DebugConfig.ini
@@ -2,9 +2,9 @@
 MailUzantisi=test.com.tr
 KullaniciAdi=esiparis
 Sifre=SipaR.2021
-GonderenMailAdresSayisi=2
-GonderenMailAdresi1=test@test.com.tr
-GonderenMailAdresi1Kod=test@test.com.tr
+GonderenMailAdresSayisi=1
+GonderenMailAdresi1=test@test.com
+GonderenMailAdresi1Kod=test@test.com
 GonderenMailAdresi2=t@s.com
 GonderenMailAdresi2Kod=t@s.com
 [HataGonderilecekMail]
