--- a/ReadingAndSendMail/ReadingAndSendMail.csproj
+++ b/ReadingAndSendMail/ReadingAndSendMail.csproj
@@ -139,6 +139,8 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="ReadingAndSendMailMainView.PNG" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
