--- a/ReadingAndSendMail/bin/DebugConfig.ini
+++ b/ReadingAndSendMail/bin/DebugConfig.ini
@@ -1,10 +1,10 @@
 [Mail]
-MailUzantisi=test.com.tr
+MailUzantisi=toksozgrup.com.tr
 KullaniciAdi=esiparis
 Sifre=SipaR.2021
 GonderenMailAdresSayisi=1
-GonderenMailAdresi1=test@test.com
-GonderenMailAdresi1Kod=test@test.com
+GonderenMailAdresi1=applications@alliance-healthcare.com.tr
+GonderenMailAdresi1Kod=applications@alliance-healthcare.com.tr
 GonderenMailAdresi2=t@s.com
 GonderenMailAdresi2Kod=t@s.com
 [HataGonderilecekMail]
@@ -14,9 +14,9 @@ HataGonderilecekMail1Adresi=alicakir@test.com.tr
 HataGonderilecekKullanici2Adi=Mehmet
 HataGonderilecekMail2Adresi=me@dada.com
 [Gonderen]
-Sunucu=172.30.232.51
+Sunucu=172.30.234.50
 Port=587
-KullaniciAdi=test
+KullaniciAdi=noreply
 Sifre=N0r3ply01
 [Ayarlar]
 GelenDosyalarinKaydedilecegiDizin=C:\Users\AliCAKIR\source\repos\ReadingAndSendMail\ReadingAndSendMail\ReadingAndSendMail\bin\Debug\Gelen
